fixed some weird issues with clipping in the traditional layout

--- a/main.css
+++ b/main.css
@@ -480,7 +480,7 @@ tt, code, pre {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	width: calc(100vw - calc(var(--chatBlockPaddingHorizontal) * 2));
+	width: var(--clipWidthValue);
 }
 
 .bsrMapInfo div {
